# BMS-Player

./: .gitignore  AudioContainer.gd  BMSParserTest.gd  README.md  default_bus_layout.tres  parser.gdextension  project.godot
assets/: gdext-ferris.png.import  note-blue.png.import  note-red.png.import  note-white.png.import
assets/elegante/: #BANNER 01.png.import  #BANNER 02.png.import  #BANNER 03.png.import  #BANNER 04.png.import  #BANNER 05.png.import  #TITLE 01.png.import  #TITLE 02.png.import  #TITLE 03.png.import  #TITLE 04.png.import  #TITLE 05.png.import  #elegante [01 EASY].bml  #elegante [02 NORMAL].bml  #elegante [03 HARD].bml  #elegante [04 SUPER HARD].bml  00_readme.txt  01_normal.bme  01_normala.bme  01ondo_normal.bme  02_LNluck.bml  02_manaka_hyper.bml  02ondo_hyper.bme  03_another.bme  03ondo_another.bme  0_elegante_dp_beginner.bme  0x_sabun_ex.bme  11_14normal.bme  12_14hyper.bme  13_14another.bme  14_14ex.bme  495_frather_plus+.bme  495_frather_puls.bme  7Clover.bms  99_another+.bme  99_uk.bme  Elegante -窓Another-.bme  _00_7keys_beginner.bme  _elegante_01.ogg.import  _elegante_02.ogg.import  _elegante_03.ogg.import  _elegante_04.ogg.import  (+412 more)
rust/parser/: Cargo.toml
rust/parser/src/: lib.rs
rust/parser/tests/: 02_hyper.bme  test_bgm.rs
scene/: bar_line.gd  bar_line.tscn  bgm_note.gd  bgm_note.tscn  bms_parser_test.tscn  hud.gd  hud.tscn  main_scene.tscn  note_blue.tscn  note_red.tscn  note_white.gd  note_white.tscn  play_scean.gd  play_scean.tscn
scene/audio/: audio_container.tscn  bgm_sequencer.gd  bgm_sequencer.tscn
scene/hud/: hud.gd  (+1 more)
(+8 files in other folders)
