[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

[dependencies.encoding_rs]
version = "*"

[dependencies.bms-rs]
version = "0.4.3"
features = ["serde", "serde_json"]

[dependencies.serde_json]
version = "*"

